--- a/SortingTester/Controls/SorterControl.xaml
+++ b/SortingTester/Controls/SorterControl.xaml
@@ -31,12 +31,12 @@
                     <ColumnDefinition Width="100" />
                 </Grid.ColumnDefinitions>
                 <Label Grid.Column="0" Content="#:" />
-                <TextBox Grid.Column="1" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding NumItems}" />
+                <TextBox Grid.Column="1" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding NumItems, UpdateSourceTrigger=PropertyChanged}" />
                 <Label Grid.Column="2" Content="Max:" />
                 <TextBox Grid.Column="3" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding MaxValue}" />
                 <Button Grid.Column="4" Height="20" Margin="2" Click="OnRandomize">Randomize</Button>
                 <Label Grid.Column="6" Content="Slow" />
-                <Slider Grid.Column="7"  Minimum="1" Maximum="1000" TickPlacement="BottomRight" TickFrequency="100" IsSnapToTickEnabled="True" IsDirectionReversed="True" Value="{Binding SwapTimeout}" />
+                <Slider Grid.Column="7"  Minimum="-99" Maximum="901" TickPlacement="BottomRight" TickFrequency="100" IsSnapToTickEnabled="True" IsDirectionReversed="True" Value="{Binding SwapTimeout}" IsEnabled="{Binding SwapTimeoutEnabled}" />
                 <Label Grid.Column="08" Content="Fast" />
                 <Button Grid.Column="9" Height="20" Click="OnSort" IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}">Sort</Button>
             </Grid>
