--- a/SortingTester/Controls/GraphControl.xaml
+++ b/SortingTester/Controls/GraphControl.xaml
@@ -5,10 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SortingTester.Controls"
              mc:Ignorable="d"
+             SizeChanged="OnSizeChanged"
              d:DesignHeight="400" d:DesignWidth="400">
     <Grid>
         <Border Name="graphBorder" BorderBrush="Black" BorderThickness="1">
-            <Canvas Name="graphCanvas"/>
+            <Canvas Name="graphCanvas" />
         </Border>
     </Grid>
 </UserControl>
