--- a/SortingTester/MainWindow.xaml
+++ b/SortingTester/MainWindow.xaml
@@ -6,8 +6,8 @@
         xmlns:local="clr-namespace:SortingTester"
         xmlns:control = "clr-namespace:SortingTester.Controls" 
         mc:Ignorable="d"
-        Title="Sorting" Height="700" Width="800">
+        Title="Sorting" Height="900" Width="900">
     <Grid>
-        <control:SorterControl/>
+        <control:SorterControl Height="800" Width="800"/>
     </Grid>
 </Window>
