--- a/SortingTester/Controls/SorterControl.xaml
+++ b/SortingTester/Controls/SorterControl.xaml
@@ -10,9 +10,10 @@
     <UserControl.Resources>
         <local:InverseBooleanConverter x:Key="InverseBooleanConverter" />
     </UserControl.Resources>
-    <Grid>
+    <Grid Margin="8">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid Name="graphGrid" Grid.Row="0">
@@ -28,22 +29,29 @@
                 <ColumnDefinition Width="50" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="50" />
-                <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="100" />
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="#:" />
-            <TextBox Grid.Column="1" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding NumItems, UpdateSourceTrigger=PropertyChanged}" />
+            <TextBox Grid.Column="1" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding NumItems}" />
             <Label Grid.Column="2" Content="Max:" />
             <TextBox Grid.Column="3" Height="20" TextAlignment="Center" VerticalContentAlignment="Center" Text="{Binding MaxValue}" />
-            <Button Grid.Column="4" Height="20" Margin="2" Click="OnRandomize">Randomize</Button>
-            <Label Grid.Column="6" Content="Slow" />
-            <Slider Grid.Column="7"  Minimum="-99" Maximum="901" TickPlacement="BottomRight" TickFrequency="100" IsSnapToTickEnabled="True" IsDirectionReversed="True" Value="{Binding SwapTimeout}" IsEnabled="{Binding SwapTimeoutEnabled}" />
-            <Label Grid.Column="08" Content="Fast" />
-            <Button Grid.Column="9" Height="20" Click="OnSort" IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}">Sort</Button>
+            <Label Grid.Column="5" Content="Slow" />
+            <Slider Grid.Column="6"  Minimum="-99" Maximum="901" TickPlacement="BottomRight" TickFrequency="100" IsSnapToTickEnabled="True" IsDirectionReversed="True" Value="{Binding SwapTimeout}" IsEnabled="{Binding SwapTimeoutEnabled}" />
+            <Label Grid.Column="7" Content="Fast" />
+        </Grid>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="100" />
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" Height="20" Click="OnRandomize">Randomize</Button>
+            <Label Grid.Column="2" Name="timeElapsedLabel" Content="{Binding TimeElapsed}" />
+            <Button Grid.Column="3" Height="20" Click="OnSort" IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}">Sort</Button>
         </Grid>
     </Grid>
 </UserControl>
