--- a/SortingTester/Controls/SorterControl.xaml
+++ b/SortingTester/Controls/SorterControl.xaml
@@ -44,14 +44,28 @@
         </Grid>
         <Grid Grid.Row="2">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="100" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" Height="20" Click="OnRandomize">Randomize</Button>
-            <Label Grid.Column="2" Name="timeElapsedLabel" Content="{Binding TimeElapsed}" />
-            <Button Grid.Column="3" Height="20" Click="OnSort" IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}">Sort</Button>
+            <StackPanel Grid.Column="0" Orientation="Horizontal">
+                <Button Height="20" Width="100" Click="OnRandomize">Randomize</Button>
+            </StackPanel>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                <ComboBox
+                    Name="sorterTypesCombobox"
+                    Width="100"
+                    ItemsSource="{Binding SorterTypes}"
+                    DisplayMemberPath="Name"
+                    SelectedValuePath="Name"
+                    SelectedValue="{Binding SelectedSorterType}"
+                    IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}"
+                    />
+            </StackPanel>
+            <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
+                <Label Name="timeElapsedLabel" Height="24" Content="{Binding TimeElapsed}" />
+                <Button Height="20" Width="100" Click="OnSort" IsEnabled="{Binding Sorting, Converter={StaticResource InverseBooleanConverter}}">Sort</Button>
+            </StackPanel>
         </Grid>
     </Grid>
 </UserControl>
